k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grug
  labels: {app.kubernetes.io/part-of: grug}
